<?xml version="1.0"?>
<package>
  <name>ca_launchers</name>
  <version>1.2.0</version>
  <description>Launchers files for different tasks</description>

  <maintainer email="mohamedashraf123@gmail.com">Mohamed Abdelkader</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author email="mohamedashraf123@gmail.com">Mohamed Abdelkader</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>turtlebot_teleop</run_depend>

  <export>
  </export>
</package>
